WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207524
AX: Unable to build webkit open source - build errors related to AXClientType
https://bugs.webkit.org/show_bug.cgi?id=207524
Summary
AX: Unable to build webkit open source - build errors related to AXClientType
chris fleizach
Reported
2020-02-10 17:17:32 PST
./accessibility/AXObjectCache.cpp:395:9: error: use of undeclared identifier '_AXUIElementUseSecondaryAXThread' _AXUIElementUseSecondaryAXThread(true); ^ ./accessibility/AXObjectCache.cpp:722:5: error: unknown type name 'AXClientType' AXClientType type = _AXGetClientForCurrentRequestUntrusted(); ^ ./accessibility/AXObjectCache.cpp:722:25: error: use of undeclared identifier '_AXGetClientForCurrentRequestUntrusted' AXClientType type = _AXGetClientForCurrentRequestUntrusted(); ^ ./accessibility/AXObjectCache.cpp:724:20: error: use of undeclared identifier 'kAXClientTypeVoiceOver' return type == kAXClientTypeVoiceOver ^ ./accessibility/AXObjectCache.cpp:725:20: error: use of undeclared identifier 'kAXClientTypeUnknown'; did you mean 'kCGContextTypeUnknown'? || type == kAXClientTypeUnknown; ^~~~~~~~~~~~~~~~~~~~ kCGContextTypeUnknown In file included from /Users/alexei/Desktop/wk-2-7-pm/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource68.cpp:1: In file included from ./accessibility/AXObjectCache.cpp:107: In file included from PAL/pal/spi/mac/HIServicesSPI.h:28: PAL/pal/spi/cg/CoreGraphicsSPI.h:76:5: note: 'kCGContextTypeUnknown' declared here kCGContextTypeUnknown, ^ In file included from /Users/alexei/Desktop/wk-2-7-pm/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource68.cpp:1: ./accessibility/AXObjectCache.cpp:756:9: error: use of undeclared identifier '_AXUIElementUseSecondaryAXThread' _AXUIElementUseSecondaryAXThread(true); ^ 6 errors generated.
Attachments
patch
(3.28 KB, patch)
2020-02-10 17:18 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(3.43 KB, patch)
2020-02-10 17:23 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch
(3.25 KB, patch)
2020-02-10 17:25 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2020-02-10 17:17:42 PST
<
rdar://problem/59279722
>
chris fleizach
Comment 2
2020-02-10 17:18:43 PST
Created
attachment 390322
[details]
patch
chris fleizach
Comment 3
2020-02-10 17:23:11 PST
Created
attachment 390323
[details]
patch
chris fleizach
Comment 4
2020-02-10 17:25:34 PST
Created
attachment 390325
[details]
patch
Mark Lam
Comment 5
2020-02-10 17:33:21 PST
Comment on
attachment 390325
[details]
patch rs=me if EWS bots are green.
WebKit Commit Bot
Comment 6
2020-02-11 00:11:04 PST
Comment on
attachment 390325
[details]
patch Clearing flags on attachment: 390325 Committed
r256294
: <
https://trac.webkit.org/changeset/256294
>
WebKit Commit Bot
Comment 7
2020-02-11 00:11:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug