AX: Unable to build webkit open source - build errors related to AXClientType https://bugs.webkit.org/show_bug.cgi?id=207524 <rdar://problem/59279722>

Reviewed by Mark Lam.

Source/WebCore/PAL:

* pal/spi/mac/HIServicesSPI.h:

Source/WebKit:

* Platform/spi/mac/ApplicationServicesSPI.h:


Canonical link: https://commits.webkit.org/220514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256294 268f45cc-cd09-0410-ab3c-d52691b4dbfc